@@ -2,8 +2,6 @@ package cloudflight.integra.backend.controller;
 
 import cloudflight.integra.backend.controller.problem.IncomeApiErrorResponses;
 import cloudflight.integra.backend.dto.IncomeDTO;
-import cloudflight.integra.backend.entity.Income;
-import cloudflight.integra.backend.mapper.IncomeMapper;
 import cloudflight.integra.backend.service.IncomeService;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
@@ -31,33 +29,31 @@ public class IncomeController {
     @PostMapping
     public ResponseEntity<IncomeDTO> createIncome(@RequestBody IncomeDTO dto) {
         log.info("Creating income: {}", dto);
-        Income saved = incomeService.createIncome(dto);
-        return new ResponseEntity<>(IncomeMapper.toDTO(saved), HttpStatus.CREATED);
+        IncomeDTO saved = incomeService.createIncome(dto);
+        return new ResponseEntity<>(saved, HttpStatus.CREATED);
     }
 
     @GetMapping("/{id}")
     public ResponseEntity<IncomeDTO> getIncomeById(@PathVariable Long id) {
         log.debug("Fetching income with id {}", id);
-        Income income = incomeService.getIncomeById(id);
-        return new ResponseEntity<>(IncomeMapper.toDTO(income), HttpStatus.OK);
+        IncomeDTO income = incomeService.getIncomeById(id);
+        return new ResponseEntity<>(income, HttpStatus.OK);
     }
 
     @GetMapping
     public ResponseEntity<List<IncomeDTO>> getAllIncomes() {
         log.debug("Fetching all incomes");
-        List<IncomeDTO> dtos = StreamSupport
-                .stream(incomeService.getAllIncomes().spliterator(), false)
-                .map(IncomeMapper::toDTO)
-                .collect(Collectors.toList());
-        return new ResponseEntity<>(dtos, HttpStatus.OK);
+        List<IncomeDTO> incomes= StreamSupport.stream(incomeService.getAllIncomes().spliterator(),false)
+                .toList();
+        return new ResponseEntity<>(incomes, HttpStatus.OK);
     }
 
     @PutMapping("/{id}")
     public ResponseEntity<IncomeDTO> updateIncome(@PathVariable Long id, @RequestBody IncomeDTO dto) {
         log.info("Updating income with id {}", id);
         dto.setId(id);
-        Income income=incomeService.updateIncome(dto);
-        return new ResponseEntity<>(IncomeMapper.toDTO(income), HttpStatus.OK);
+        IncomeDTO income=incomeService.updateIncome(dto);
+        return new ResponseEntity<>(income, HttpStatus.OK);
     }
 
     @DeleteMapping("/{id}")
